--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,17 @@ nav {
 	background: white;
 }
 
+select {
+	margin-bottom: 1.5rem;
+}
+
+input[type="submit"] {
+	display: block;
+	background-color: #ef0606;
+	margin: 0 auto;
+	padding: 0.25rem 0.5rem;
+}
+
 .box-shadow-3 {
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
