--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
-
+:root {
+	--darker-red: #BD0000;
+}
 /* Typography */
 p, legend {
 	font-size: 0.75rem;
@@ -7,6 +9,9 @@ p, legend {
 /* Layout */
 textarea, form, fieldset {
 	max-width: 300px;
+}
+fieldset {
+	min-height: 150px; /* to accomodate increasing size of buttons on focus */
 }
 .block-center {
 	display: block;
@@ -27,11 +32,48 @@ select {
 	margin-bottom: 1.5rem;
 }
 
-input[type="submit"] {
+
+.button {
+	min-width: 60px;
+	min-height: 30px;
+	border: solid 1px var(--darker-red);
+	color: white;
+	font-size: 1rem;
+	font-weight: 300;
 	display: block;
 	background-color: #ef0606;
 	margin: 0 auto;
 	padding: 0.25rem 0.5rem;
+ 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.button.-bg_dark {
+	box-shadow: 0 1px 3px rgba(255,255,255,0.24), 0 1px 2px rgba(255,255,255,0.48);
+}
+
+
+
+.button:hover {
+	font-size: 1.1rem;
+	font-weight: 700;
+	min-width: 70px;
+	min-height: 35px;
+	padding: 0.5rem 0.75rem;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.button.-bg_dark:hover {
+	box-shadow: 0 10px 20px rgba(255,255,255,0.25), 0 6px 6px rgba(255,255,255,0.22);
+}  
+
+.button:active {
+	font-size: 0.9rem;
+	font-weight: 300;
+	min-width: 57px;
+	min-height: 27px;
+	padding: 0.2rem 0.45rem;
+  	box-shadow: none;
 }
 
 .box-shadow-3 {
