--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,37 @@ p, legend {
 }
 
 /* Layout */
-textarea, form, fieldset {
-	max-width: 300px;
+h2 {
+	margin-bottom: 1.5rem
 }
-fieldset {
+textarea, fieldset {
+	max-width: 300px;
+	padding: 1rem; 
+	margin:0;
+	margin-bottom: 1.5rem
+}
+fieldset.cipher-key {
 	min-height: 150px; /* to accomodate increasing size of buttons on focus */
 }
 .block-center {
 	display: block;
 	margin: auto;
+}
+.table-row {
+	display: table-row;
+}
+.table-cell {
+	display: table-cell;
+}
+h3.table-cell {
+	padding: 0 0 1.5rem; /* To mimic the effect of margin-bottom */
+}
+
+.table-cell.-v-align-middle {
+	vertical-align: middle;
+}
+.h-100 {
+	height: 100%;
 }
 nav {
 	position: fixed;
@@ -55,12 +77,14 @@ select {
 
 
 .button:hover {
+	font-weight: 700;	
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	/* produces a smooter transition than using transform-scale */
 	font-size: 1.1rem;
-	font-weight: 700;
 	min-width: 70px;
 	min-height: 35px;
 	padding: 0.5rem 0.75rem;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
 }
 
 .button.-bg_dark:hover {
@@ -68,12 +92,13 @@ select {
 }  
 
 .button:active {
-	font-size: 0.9rem;
 	font-weight: 300;
+  	box-shadow: none;
+	/* produces a smooter transition than using transform-scale */
 	min-width: 57px;
 	min-height: 27px;
 	padding: 0.2rem 0.45rem;
-  	box-shadow: none;
+	font-size: 0.9rem;	
 }
 
 .box-shadow-3 {
@@ -107,9 +132,6 @@ select {
 	background-color: black;
 }
 
-.encryption h3, .decryption h3 {
-  	display: table-row; /* To display in a block-like manner */
-}
 
 .bg-gradient.-radial{
 	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ccedff+0,ffffff+100 */
