--- a/css/styles.css
+++ b/css/styles.css
@@ -65,39 +65,32 @@ select {
 	display: block;
 	background-color: #ef0606;
 	margin: 0 auto;
-	padding: 0.25rem 0.5rem;
  	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  	transition: all 0.3s ease;
 }
 
 .button.-bg_dark {
 	box-shadow: 0 1px 3px rgba(255,255,255,0.24), 0 1px 2px rgba(255,255,255,0.48);
 }
 
-
-
-.button:hover {
-	font-weight: 700;	
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.button:hover, .button:focus {
+	font-weight: 600;	
+  	box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);
 	/* produces a smooter transition than using transform-scale */
 	font-size: 1.1rem;
-	min-width: 70px;
+	min-width: 65px;
 	min-height: 35px;
-	padding: 0.5rem 0.75rem;
-
 }
 
-.button.-bg_dark:hover {
+.button.-bg_dark:hover, .button.-bg_dark:focus {
 	box-shadow: 0 10px 20px rgba(255,255,255,0.25), 0 6px 6px rgba(255,255,255,0.22);
 }  
 
-.button:active {
+.button:active, .button.-bg_dark:active {
 	font-weight: 300;
   	box-shadow: none;
-	/* produces a smooter transition than using transform-scale */
 	min-width: 57px;
 	min-height: 27px;
-	padding: 0.2rem 0.45rem;
 	font-size: 0.9rem;	
 }
 
