--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ select {
 	background-color: #ef0606;
 	margin: 0 auto;
  	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  	transition: all 0.3s ease;
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .button.-bg_dark {
