--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,7 @@ textarea, fieldset {
 	margin:0;
 	margin-bottom: 1.5rem
 }
-fieldset.cipher-key {
-	min-height: 150px; /* to accomodate increasing size of buttons on focus */
-}
+
 .block-center {
 	display: block;
 	margin: auto;
@@ -66,7 +64,8 @@ select {
 .button {
 	min-width: 60px;
 	min-height: 30px;
-	border: solid 1px var(--darker-red);
+	border: transparent;
+	border-radius: 2px;
 	color: white;
 	font-size: 1rem;
 	font-weight: 300;
@@ -76,18 +75,29 @@ select {
  	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+@keyframes dashedBorder {
+	to {
+		outline-color: var(--darker-red);
+		box-shadow: 0 0 0 2px white;
+	}
+}
+.animated-border {
+  	display: inline-block; 
+
+}
+.animated-border > input:focus{
+  	outline: 2px dashed white;
+	border-radius: 2px;
+  	box-shadow: 0 0 0 2px var(--darker-red);
+  	animation: 0.3s dashedBorder ease-in infinite;
+}
 
 .button.-bg_dark {
 	box-shadow: 0 1px 3px rgba(255,255,255,0.24), 0 1px 2px rgba(255,255,255,0.48);
 }
 
 .button:hover, .button:focus {
-	font-weight: 600;	
-  	box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);
-	/* produces a smooter transition than using transform-scale */
-	font-size: 1.1rem;
-	min-width: 65px;
-	min-height: 35px;
+  	box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);	
 }
 
 .button.-bg_dark:hover, .button.-bg_dark:focus {
@@ -95,7 +105,6 @@ select {
 }  
 
 .button:active, .button.-bg_dark:active {
-	font-weight: 300;
   	box-shadow: none;
 	min-width: 57px;
 	min-height: 27px;
