--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ select {
   	box-shadow: 0 10px 20px rgba(0,0,0,0.25), 0 6px 6px rgba(0,0,0,0.22);	
 }
 
-.button.-bg_dark:hover, .button.-bg_dark:focus {
+.button.-bg_dark:hover {
 	box-shadow: 0 10px 20px rgba(255,255,255,0.25), 0 6px 6px rgba(255,255,255,0.22);
 }  
 
