--- a/css/styles.css
+++ b/css/styles.css
@@ -70,8 +70,7 @@ select {
 .button {
 	min-width: 60px;
 	min-height: 30px;
-	border: transparent;
-	border-radius: 2px;
+	border:none;
 	color: white;
 	font-size: 1rem;
 	font-weight: 300;
@@ -89,13 +88,14 @@ select {
 }
 .animated-border {
   	display: inline-block; 
+  	border-radius: 5px;
 
 }
 .animated-border > input:focus{
   	outline: 2px dashed white;
 	border-radius: 2px;
   	box-shadow: 0 0 0 2px var(--darker-red);
-  	animation: 0.3s dashedBorder ease-in infinite;
+  	animation: 0.25s dashedBorder linear infinite;
 }
 
 .button.-bg_dark {
